--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
 .App {
   position: relative;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 body {
@@ -57,31 +62,27 @@ h3 {
 }
 
 .winner {
-  position: absolute;
-  top: 0px; /* Ajusta según necesidad */
+  position: fixed; /* Fijado en la pantalla */
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
-  background-color: white;
-  padding: 20px;
-
-  z-index: 9999; /* Asegura que esté por encima de todo */
-
-  height: 100vh; /* No permite que el contenedor sea más alto que el 90% de la pantalla */
   width: 100%;
-
+  height: 100vh; /* Asegura que ocupa toda la pantalla */
+  z-index: 9999;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centra horizontalmente */
-  justify-content: center; /* Centra verticalmente */
+  align-items: center;
+  justify-content: center;
   gap: 20px;
-
+  padding: 20px;
   background-color: #d10e42;
 }
 
 .winner img {
-  width: 100%; /* La imagen se ajusta al ancho del div */
+  max-width: 80%; /* La imagen no será más ancha del 80% del contenedor */
+  max-height: 80vh; /* La imagen no ocupará más de la mitad de la pantalla */
   height: auto; /* Mantiene la proporción */
-  border-radius: 10px; /* Opcional: para que la imagen tenga bordes redondeados */
+  border-radius: 10px;
 }
 
 .win-title {
@@ -96,31 +97,29 @@ h3 {
 }
 
 .loser {
-  position: absolute;
-  top: 0px; /* Ajusta según necesidad */
+  position: fixed; /* Fijado en la pantalla */
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
-  background-color: white;
-  padding: 20px;
-
-  z-index: 9999; /* Asegura que esté por encima de todo */
-
-  height: 100vh; /* No permite que el contenedor sea más alto que el 90% de la pantalla */
   width: 100%;
+  height: 100vh; /* Asegura que ocupa toda la pantalla */
+  z-index: 9999;
 
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centra horizontalmente */
-  justify-content: center; /* Centra verticalmente */
+  align-items: center;
+  justify-content: center;
   gap: 20px;
 
   background-color: #331f20;
+  padding: 20px;
 }
 
 .loser img {
-  width: 100%; /* La imagen se ajusta al ancho del div */
+  max-width: 80%; /* La imagen no será más ancha del 80% del contenedor */
+  max-height: 80vh; /* La imagen no ocupará más de la mitad de la pantalla */
   height: auto; /* Mantiene la proporción */
-  border-radius: 10px; /* Opcional: para que la imagen tenga bordes redondeados */
+  border-radius: 10px;
 }
 
 @media (min-width: 600px) {
@@ -130,8 +129,7 @@ h3 {
     justify-content: center; /* Centra los botones */
     gap: 10px; /* Espaciado entre botones */
     max-width: 650px; /* Limita el ancho en desktop */
-    margin: 20px auto; /* Centra el contenedor */
-    padding: 10px;
+    margin: 0px auto; /* Centra el contenedor */
   }
 
   .letter-button {
@@ -171,4 +169,8 @@ h3 {
 
 .hiddenWord h3 {
   letter-spacing: 2px; /* Ajusta según necesites */
+}
+
+h3 {
+  margin: 0px;
 }
